# infonih

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FLOWS.md  LICENSE  PRODUCT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: FLOWS.md
.claude/agents/: infonih-python-dev.md
alembic/: env.py
alembic/versions/: 22b34bcc0f7a_initial_schema_sources_articles_user_.py  3dc4735ce08f_id_columns_server_side_gen_random_uuid_.py  6ffd0267131c_add_cost_events_table.py  c6f6908fb6ed_unique_constraints_nulls_not_distinct_.py
docs/img/: README.md
seeds/: interests.example.md  sources.example.yaml
src/infonih/: config.py  main.py  scheduler.py
src/infonih/adapters/: anthropic_adapter.py  rss_adapter.py  telegram_adapter.py
src/infonih/adapters/postgres/: __init__.py  article_repository.py  cost_repository.py  models.py  postgres_adapter.py  source_repository.py  user_settings_repository.py
src/infonih/agents/pipelines/: build_daily_digest.py  ingest_source.py  score_articles.py
src/infonih/agents/prompts/: prompts.py
src/infonih/agents/prompts/templates/: score_article.md  summarize_for_digest.md
src/infonih/agents/schemas/: article_score_schema.py  digest_summary_schema.py
src/infonih/agents/utils/digest/: format_telegram_message.py
src/infonih/agents/utils/llm/: pricing.py
src/infonih/agents/utils/url/: normalize_url.py
src/infonih/domain/: article.py  category.py  cost_event.py  feed_entry.py  source.py  user_settings.py
src/infonih/domain/repositories/: article_repository.py  cost_repository.py  source_repository.py  user_settings_repository.py
src/infonih/scripts/: ingest_once.py  run_scheduler.py  run_telegram_bot.py  seed.py
tests/: conftest.py  test_health.py  test_scheduler.py
tests/adapters/: test_postgres_adapter.py  test_rss_adapter.py
tests/adapters/postgres/: test_article_repository.py  test_cost_repository.py  test_source_repository.py  test_user_settings_repository.py
tests/agents/pipelines/: test_build_daily_digest.py  test_ingest_source.py  test_score_articles.py
tests/agents/utils/: test_format_telegram_message.py  test_normalize_url.py  test_pricing.py
tests/scripts/: test_seed.py
