[project]
name = "infonih"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sofrosine", email = "soultanmuh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain-core>=1.3.2",
    "langgraph>=1.1.9",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "httpx>=0.28.0",
    "mypy>=1.20.2",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-postgresql>=8.0.0",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=src/infonih --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
branch = true
source = ["src/infonih"]
omit = [
    "src/infonih/adapters/postgres/models.py",
    "src/infonih/domain/*",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
